# bastion

./: .env  Makefile  README.md  gpt  k.pem  suricata.yaml  suricata.yml  t2.pem  test.pem
axum/: .env  Cargo.toml
axum/src/: main.rs
axum/src/cors/: cors.rs
axum/src/handlers/: eve_json_log.rs  mod.rs  rule.rs  suricata.rs
axum/src/models/: common.rs  eve_json_log.rs  mod.rs  post.rs  rule.rs
axum/src/routes/: eve_json_log.rs  mod.rs  post.rs  rule.rs  suricata.rs
axum/src/utils/: mod.rs  suricata.rs
docker/: docker-compose.yml
docker/axum/: Dockerfile  push.sh
docker/common/: common.sh
docker/fluent-bit/: Dockerfile  fluent-bit.conf  jsonb.lua  parser.conf  push.sh
docker/fluentd/: Dockerfile  fluent.conf  fluentd.conf  push.sh
docker/suricata/: Dockerfile  push.sh  suricata.yaml
script/: install-docker.sh  provisioning.sh  set-swap-memory.sh
server/: Cargo.toml  README.md
server/src/: main.rs
server/src/handlers/: post.rs
server/src/models/: mod.rs
server/src/routes/: post.rs
