[package]
name = "axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.140"
bcrypt = "0.17.0"
tokio = { version = "1.44.1", features = ["full"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = {version = "0.12.15",default-features = false, features = ["json"] }